@@ -763,6 +763,9 @@ static MagickBooleanType CopyDelegateFile(const char *source,
     destination_file,
     source_file;
 
+  MagickBooleanType
+    status;
+
   register size_t
     i;
 
@@ -784,6 +787,9 @@ static MagickBooleanType CopyDelegateFile(const char *source,
   */
   assert(source != (const char *) NULL);
   assert(destination != (char *) NULL);
+  status=GetPathAttributes(destination,&attributes);
+  if ((status != MagickFalse) && (attributes.st_size != 0))
+    return(MagickTrue);
   destination_file=open_utf8(destination,O_WRONLY | O_BINARY | O_CREAT,S_MODE);
   if (destination_file == -1)
     return(MagickFalse);
